--- a/gearheads.html
+++ b/gearheads.html
@@ -135,15 +135,7 @@
             Alguém ainda assiste? Ainda é interessante? Não é só o [Lewis] Hamilton?’. Ainda
             era só Hamilton, mas eu descobri os outros pilotos e comecei a torcer para
             eles", afirma a torcedora da equipe “Red Bull Racing”, que hoje leva Max
-            Verstappen, bicampeão mundial da F1, como piloto favorito. “O bacana da série é
-            que atraiu pessoas para o esporte, o que eu acho muito importante para
-            desenvolver esse interesse mais profundo nas corridas. Eu não sabia nada e não
-            conhecia ninguém que assistia. Aí comecei a assistir e a galera daqui de casa
-            começou a perguntar ‘você está assistindo corrida de Fórmula 1? Alguém ainda
-            assiste? Ainda é interessante? Não é só o [Lewis] Hamilton?’. Ainda era só
-            Hamilton, mas eu descobri os outros pilotos e comecei a torcer para eles",
-            afirma a torcedora da equipe “Red Bull Racing”, que hoje leva Max Verstappen,
-            bicampeão mundial da F1, como piloto favorito.
+            Verstappen, bicampeão mundial da F1, como piloto favorito.
         </p>
         <div class="container mb-4 mt-4">
             <div class="text-center">
